--- a/templates/explorer.html
+++ b/templates/explorer.html
@@ -248,7 +248,7 @@
     <div class="card-footer text-muted small">
         <div class="row">
             <div class="col-md-6">
-                Showing {{ items|length }} items (limited to first 100 for performance)
+                Showing {{ items|length }} items
             </div>
         </div>
     </div>
